--- a/config.yml
+++ b/config.yml
@@ -1,9 +1,9 @@
-database:
-  host: postgres
-  port: 5432
-  user: docker
-  password: docker
-  name: postgres
-  sslmode: disable
-  migrations: migrations
-  driver: pgx
+#database:
+#  host: postgres
+#  port: 5432
+#  user: docker
+#  password: docker
+#  name: postgres
+#  sslmode: disable
+#  migrations: migrations
+#  driver: pgx
